--- a/kas/imx8mm-var-dart-sdcard.yml
+++ b/kas/imx8mm-var-dart-sdcard.yml
@@ -12,11 +12,13 @@ local_conf_header:
 
   imx8mm-var-dart: |
     IMAGE_BOOT_FILES = ""
-    MENDER_IMAGE_BOOTLOADER_FILE = "u-boot-spl.img"
-    MENDER_IMAGE_BOOTLOADER_BOOTSECTOR_OFFSET = "2"
+    MENDER_IMAGE_BOOTLOADER_FILE = "imx-boot"
+    MENDER_IMAGE_BOOTLOADER_BOOTSECTOR_OFFSET = "66"
+    UBOOT_CONFIG = "sd"
     MENDER_BOOT_PART_SIZE_MB = "0"
     MENDER_PARTITION_ALIGNMENT = "4194304"
     MENDER_FEATURES_ENABLE:append = " mender-uboot mender-image-sd"
     MENDER_FEATURES_DISABLE:append = " mender-grub mender-image-uefi"
+    MENDER_STORAGE_DEVICE = "/dev/mmcblk1"
 
 machine: imx8mm-var-dart
