feat: demos: add raspberrypi4-64-app-updates
This adds a demo configuration and layer which provides a
build for the Raspberry Pi 4, 64 bit mode, with the following features:
- Mender integration
- k3s installed and running
- application update module for k3s/k8s installed

Changelog: Title
Ticket: None

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,6 +95,9 @@ jobs:
             experimental: true
           - board: stm32mp15-disco
             experimental: true
+          - board: raspberrypi4-64-app-updates
+            experimental: true
+            subpath: demos
 
     runs-on: [self-hosted, linux, x64]
     container:
