--- a/kas/include/boundarydevices.yml
+++ b/kas/include/boundarydevices.yml
@@ -1,7 +1,7 @@
 header:
-  version: 11
+  version: 14
 
 repos:
   meta-boundary:
     url: https://github.com/boundarydevices/meta-boundary.git
-    refspec: a923c43ec40bd406e719df7bd645f7da0728ec7a
+    commit: 0c405be0b905b239b96dc6f65a2eebc27a7e21c7
