--- a/kas/include/amlogic.yml
+++ b/kas/include/amlogic.yml
@@ -1,10 +1,10 @@
 header:
-  version: 11
+  version: 14
 
 repos:
   meta-meson:
     url: https://github.com/superna9999/meta-meson
-    refspec: 2255f691bef0fd23228b777c2043548581917382
+    commit: 4a83d41dda9fcad026253046b677a1c20582391e
 
   meta-mender-community:
     layers:
