--- a/kas/include/atmel.yml
+++ b/kas/include/atmel.yml
@@ -1,14 +1,14 @@
 header:
-  version: 11
+  version: 14
 
 repos:
   meta-atmel:
     url: https://github.com/linux4sam/meta-atmel
-    refspec: 7d0f089e6c924b2cbb1a67a98cf49e6412efbd41
+    commit: 8c0d39c31ca47a677e8bcfe88045ab81fb7f20da
 
   meta-arm:
     url: git://git.yoctoproject.org/meta-arm.git
-    refspec: 96aad3b29aa7a5ee4df5cf617a6336e5218fa9bd
+    commit: bf98ef902e6e7042e46a69fb2df6c68d00de2764
     layers:
       meta-arm:
       meta-arm-toolchain:
