--- a/kas/include/mender-base.yml
+++ b/kas/include/mender-base.yml
@@ -1,12 +1,12 @@
 header:
-  version: 11
+  version: 14
 
 distro: "poky"
 
 repos:
   poky:
     url: http://git.yoctoproject.org/poky
-    refspec: d34002348374669528bb884c2d7be1b91938f471
+    commit: 7e87dc422d972e0dc98372318fcdc63a76347d16
     layers:
       meta:
       meta-poky:
@@ -14,13 +14,13 @@ repos:
 
   meta-openembedded:
     url: https://git.openembedded.org/meta-openembedded
-    refspec: fda737ec0cc1d2a5217548a560074a8e4d5ec580
+    commit: dd3d2293ffdf2559f8a433f241765a8ab50cd085
     layers:
       meta-oe:
 
   meta-mender:
     url: https://github.com/mendersoftware/meta-mender.git
-    refspec: b0ddecea00090fb82de0e088767aeb4d4f7cab64
+    commit: 9efa9409684e303472ed9dae749ab663909eb689
     layers:
       meta-mender-core:
 
