--- a/kas/include/rockchip.yml
+++ b/kas/include/rockchip.yml
@@ -1,16 +1,16 @@
 header:
-  version: 11
+  version: 14
 
 repos:
   meta-arm:
     url: git://git.yoctoproject.org/meta-arm.git
-    refspec: kirkstone
+    commit: bf98ef902e6e7042e46a69fb2df6c68d00de2764
     layers:
       meta-arm:
       meta-arm-toolchain:
   meta-rockchip:
     url: git://git.yoctoproject.org/meta-rockchip.git
-    refspec: 1f5e7b10eef4e4906daee7e7f03211823f832ce7
+    commit: 1f5e7b10eef4e4906daee7e7f03211823f832ce7
 
   meta-mender-community:
     layers:
