--- a/kas/include/tegra-jetpack4.yml
+++ b/kas/include/tegra-jetpack4.yml
@@ -1,20 +1,23 @@
 header:
-  version: 11
+  version: 14
   includes:
   - kas/include/tegra-base.yml
 
 repos:
   meta-tegra:
-    refspec: kirkstone-l4t-r32.7.x
+    #branch: kirkstone-l4t-r32.7.x
+    commit: 928ba1b5fd3a49c511a29fe2e00de971675e42d5
     layers:
       .:
       contrib:
   meta-tegra-community:
-    refspec: kirkstone-l4t-r32.7.x
+    #branch: kirkstone-l4t-r32.7.x
+    commit: 8f2e68383378f8a57437e4832f6b6de5be139b2b
   meta-tegrademo:
-    refspec: kirkstone-l4t-r32.7.x
+    #branch: kirkstone-l4t-r32.7.x
+    commit: f7618854c9fc23e1c8f4150c8c36dbe5d5b56531
   meta-virtualization:
-    refspec: kirkstone
+    commit: 02a6c00d9370992a54296633de26a13a9a08ca2a
 
   meta-mender-community:
     layers:
