--- a/kas/include/ti.yml
+++ b/kas/include/ti.yml
@@ -1,15 +1,15 @@
 header:
-  version: 11
+  version: 14
 
 repos:
   meta-arm:
     url: https://git.yoctoproject.org/meta-arm
-    refspec: kirkstone
+    commit: bf98ef902e6e7042e46a69fb2df6c68d00de2764
     layers:
       meta-arm:
       meta-arm-toolchain:
   meta-ti:
     url: https://git.yoctoproject.org/meta-ti
-    refspec: kirkstone
+    commit: 1a4575bf209e420a477e095bf2a5113f39229906
     layers:
       meta-ti-bsp:
