--- a/kas/intel-corei7-64.yml
+++ b/kas/intel-corei7-64.yml
@@ -1,12 +1,12 @@
 header:
-  version: 11
+  version: 14
   includes:
   - kas/include/mender-full.yml
 
 repos:
   meta-intel:
     url: https://git.yoctoproject.org/meta-intel
-    refspec: 1aacdb4ed1e639cc6e19c541b058264eb17eb093
+    commit: 1aacdb4ed1e639cc6e19c541b058264eb17eb093
 
 local_conf_header:
   intel-corei7-64: |
