--- a/kas/jetson-agx-xavier-devkit.yml
+++ b/kas/jetson-agx-xavier-devkit.yml
@@ -1,5 +1,5 @@
 header:
-  version: 11
+  version: 14
   includes:
   - kas/include/mender-full.yml
   - kas/include/tegra-jetpack5.yml
@@ -8,7 +8,7 @@ machine: jetson-agx-xavier-devkit
 
 repos:
   meta-tegra:
-    refspec: eb2bcfbfca44d100205c2d865a1ab5add1c4f264
+    commit: eb2bcfbfca44d100205c2d865a1ab5add1c4f264
 
 local_conf_header:
   AB-upgrades: |
