--- a/kas/jetson-orin-nano-devkit.yml
+++ b/kas/jetson-orin-nano-devkit.yml
@@ -1,5 +1,5 @@
 header:
-  version: 11
+  version: 14
   includes:
     - kas/include/mender-full.yml
     - kas/include/tegra-jetpack5.yml
@@ -7,7 +7,7 @@ header:
 machine: jetson-orin-nano-devkit
 repos:
   meta-tegra:
-    refspec: b7a0792b996b47305c7ec1713621b0e07d314700
+    commit: b7a0792b996b47305c7ec1713621b0e07d314700
 
 local_conf_header:
   AB-upgrades: |
