fix: Github Actions: fix spurious "," typo
Changelog: Title
Ticket: None

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,7 +94,7 @@ jobs:
         include:
           - board: apalis-imx6
             experimental: true
-          - board: colibri-imx6ull,
+          - board: colibri-imx6ull
             experimental: true
           - board: stm32mp15-disco
             experimental: true
