--- a/kas/include/raspberrypi.yml
+++ b/kas/include/raspberrypi.yml
@@ -6,7 +6,15 @@ repos:
     url: https://github.com/agherzan/meta-raspberrypi.git
     commit: d7544f35756d87834e8b4bf3e3e733c771d380ae
 
-  meta-mender:
+  meta-lts-mixins:
+    url: https://git.yoctoproject.org/meta-lts-mixins
+    commit: 66ceeebd047d7fdfc8668b300319a76da8ae257d
+    patches:
+      0001-uboot-lts-kirkstone:
+        repo: meta-mender-community
+        path: kas/patches/0001-chore-mark-layer-as-compatible-with-kirkstone.patch
+
+  meta-mender-community:
     layers:
       meta-mender-raspberrypi:
 
