chore: GitHub Actions: add BBB and RPi3 to validation build
Changelog: Title
Ticket: None

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.github/workflows/build_validation.yml
+++ b/.github/workflows/build_validation.yml
@@ -33,6 +33,10 @@ jobs:
       fail-fast: false
       matrix:
         board: [
+          beaglebone,
+          beaglebone-uboot,
+          raspberrypi3,
+          raspberrypi3-64,
           raspberrypi4,
           raspberrypi4-64,
           raspberrypi5,
