chore: add rock-4c-plus to build test
Changelog: Title
Ticket: None

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.github/workflows/build_boards.yml
+++ b/.github/workflows/build_boards.yml
@@ -50,7 +50,8 @@ jobs:
           vexpress-qemu,
           vexpress-qemu-flash,
           x86-virtual,
-          beaglebone-uboot
+          beaglebone-uboot,
+          rock-4c-plus,
         ]
         subpath: [.]
 
