--- a/kas/include/validation.yml
+++ b/kas/include/validation.yml
@@ -9,3 +9,4 @@ repos:
 local_conf_header:
   validation: |
     IMAGE_INSTALL:append = " bootloader-validation "
+    MENDER_FEATURES_ENABLE:append = " mender-prepopulate-inactive-partition "
