--- a/kas/include/validation.yml
+++ b/kas/include/validation.yml
@@ -10,3 +10,4 @@ local_conf_header:
   validation: |
     IMAGE_INSTALL:append = " bootloader-validation "
     MENDER_FEATURES_ENABLE:append = " mender-prepopulate-inactive-partition "
+    MENDER_FEATURES_DISABLE:append = " mender-growfs-data "
