--- a/kas/include/validation.yml
+++ b/kas/include/validation.yml
@@ -11,3 +11,4 @@ local_conf_header:
     IMAGE_INSTALL:append = " bootloader-validation "
     MENDER_FEATURES_ENABLE:append = " mender-prepopulate-inactive-partition "
     MENDER_FEATURES_DISABLE:append = " mender-growfs-data "
+    EXTRA_IMAGE_FEATURES:append = " allow-empty-password empty-root-password allow-root-login "
