chore: GitHub Actions: adapt triggers and schedule
Changelog: Title
Ticket: None

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.github/workflows/build_demos.yml
+++ b/.github/workflows/build_demos.yml
@@ -2,10 +2,9 @@ name: build_demos
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["cache layers"]
-    types: 
-    - completed
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '5 2 * * 6'
 
 env:
   BUILDDIR: demos
