--- a/kas/qemuarm64.yml
+++ b/kas/qemuarm64.yml
@@ -17,4 +17,13 @@ local_conf_header:
     MENDER_EFI_LOADER = "edk2-firmware"
     MENDER_STORAGE_DEVICE = "/dev/vda"
 
+  qemu: |
+    QB_MACHINE = "-machine virt,secure=on"
+    QB_OPT_APPEND += "-no-acpi"
+    QB_MEM = "-m 2048"
+    QB_DEFAULT_FSTYPE = "uefiimg"
+    QB_DEFAULT_BIOS = "QEMU_EFI.fd"
+    QB_ROOTFS_OPT = ""
+    QB_KERNEL_ROOT = "/dev/vda2"
+
 machine: qemuarm64
