--- a/kas/include/validation.yml
+++ b/kas/include/validation.yml
@@ -8,7 +8,8 @@ repos:
 
 local_conf_header:
   validation: |
-    IMAGE_INSTALL:append = " bootloader-validation "
     MENDER_FEATURES_ENABLE:append = " mender-prepopulate-inactive-partition "
     MENDER_FEATURES_DISABLE:append = " mender-growfs-data "
-    EXTRA_IMAGE_FEATURES:append = " allow-empty-password empty-root-password allow-root-login "
+
+target:
+  - mender-validation-image
