feat: GitHub Actions: add QEMU to validation builds
The following boards can now be run with vanilla runqemu
to check the board integration:
- qemuarm64
- qemux86-64
- vexpress-qemu

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/.github/workflows/build_validation.yml
+++ b/.github/workflows/build_validation.yml
@@ -40,6 +40,9 @@ jobs:
           raspberrypi4,
           raspberrypi4-64,
           raspberrypi5,
+          qemuarm64,
+          qemux86-64,
+          vexpress-qemu
         ]
         subpath: [.]
 
