kas: build with tip of meta-mender master / scarthgap
Build with the latest tip of scarthgap-targetted master to
find emerging issues.

Signed-off-by: Josef Holzmayr <jester@theyoctojester.info>

--- a/kas/include/nxp.yml
+++ b/kas/include/nxp.yml
@@ -4,16 +4,13 @@ header:
 repos:
   meta-freescale:
     url: https://github.com/Freescale/meta-freescale.git
-    # branch: scarthgap
-    commit: a7bf57d45cdd908155b4179845aa9d1d78095bc0
+    branch: scarthgap
   meta-freescale-3rdparty:
     url: https://github.com/Freescale/meta-freescale-3rdparty.git
-    # branch: scarthgap
-    commit: 2602df3c730d970b8a4aa685b9f43d7ccd2c5d0f
+    branch: scarthgap
   meta-freescale-distro:
     url: https://github.com/Freescale/meta-freescale-distro.git
-    # branch: scarthgap
-    commit: b9d6a5d9931922558046d230c1f5f4ef6ee72345
+    branch: scarthgap
 
   meta-mender-community:
     layers:
