--- a/kas/include/tegra-jetpack5.yml
+++ b/kas/include/tegra-jetpack5.yml
@@ -6,14 +6,11 @@ header:
 
 repos:
   meta-tegra:
-    # refers to the scarthgap-l4t-r35.x branch
-    commit: 972488415a80afebbd652a983a46c2641eed99ad
+    branch: scarthgap-l4t-r35.x
   meta-tegra-community:
-    # refers to the scarthgap-l4t-r35.x branch
-    commit: 865561b6d3ba6607a814354c122c91422df720d5
+    branch: scarthgap-l4t-r35.x
   meta-tegrademo:
-    # refers to the scarthgap-l4t-r35.x branch
-    commit: 2d9319ba0c24fb46937a742d78fc046983edb325
+    branch: scarthgap-l4t-r35.x
 
   meta-mender-community:
     layers:
