--- a/kas/include/tegra-jetpack6.yml
+++ b/kas/include/tegra-jetpack6.yml
@@ -6,14 +6,11 @@ header:
 
 repos:
   meta-tegra:
-    # refers to the scarthgap branch
-    commit: 20f761d3e072441ba1ee252e0b30d821395c4d7c
+    branch: scarthgap
   meta-tegra-community:
-    # refers to the scarthgap branch
-    commit: 1ec483599ebd16967468e71012f653ad2fa045cc
+    branch: scarthgap
   meta-tegrademo:
-    # refers to the scarthgap branch
-    commit: 1457cc45939f72aef097cb5799a7fd9120bab332
+    branch: scarthgap
 
   meta-mender-community:
     layers:
