--- a/kas/include/ti.yml
+++ b/kas/include/ti.yml
@@ -4,6 +4,6 @@ header:
 repos:
   meta-ti:
     url: https://git.yoctoproject.org/meta-ti
-    commit: e902a647ec3685009f870d6222336bfb6e7af6c3
+    branch: scarthgap
     layers:
       meta-ti-bsp:
