--- a/.github/workflows/build_boards.yml
+++ b/.github/workflows/build_boards.yml
@@ -1,4 +1,4 @@
-name: build boards
+name: build_boards
 
 on:
   workflow_dispatch:
@@ -7,23 +7,23 @@ on:
     - cron:  '5 2 * * 6'
 
 env:
-  BUILDDIR: gh
+  BUILDDIR: build
 
 jobs:
   prepare:
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux, x64, builder]
+    outputs:
+      artifact_path: ${{ steps.artifact_path.outputs.artifact_path }}
     steps:
       - name: Clean up
         run: rm -fR $BUILDDIR
       - uses: actions/checkout@v4
-      - name: cache metadata layers
-        run: ./ci/update-repos
-        env:
-          LAYERCACHE: ${{ vars.PERSISTENT_DIR }}/layers
+      - id: artifact_path
+        name: create artifact output directory
+        run: echo "artifact_path=${{ vars.ARTIFACT_OUTPUT_DIR }}/$GITHUB_REPOSITORY/$GITHUB_WORKFLOW/$GITHUB_RUN_NUMBER-$GITHUB_RUN_ATTEMPT" >> $GITHUB_OUTPUT
 
   build:
     needs: [prepare]
-    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
@@ -50,11 +50,6 @@ jobs:
           jetson-xavier-nx-devkit,
           libretech-ac,
           libretech-cc,
-          nitrogen8m,
-          nitrogen8mm,
-          nitrogen8mn,
-          nitrogen8mp,
-          osd32mp1-emmc-mender,
           raspberrypi,
           raspberrypi-cm,
           raspberrypi0,
@@ -71,40 +66,20 @@ jobs:
           qemux86-64,
           vexpress-qemu,
           vexpress-qemu-flash,
-          colibri-imx8x,
-          verdin-imx8mm,
-          verdin-imx8mp,
-          imx8mm-var-dart,
-          sama5d27-som1-ek-sd,
-          sama5d3-xplained,
           intel-corei7-64,
           intel-corei7-64-sdcard,
           intel-nuc-ssd,
           cubox-i,
           rock-pi-e,
-          apalis-imx8, 
           apalis-imx8-boot2qt,
           x86-virtual,
           jetson-orin-nano-devkit,
           jetson-orin-nano-devkit-nvme,
           jetson-agx-orin-devkit,
         ]
-        experimental: [false]
         subpath: [.]
-        include:
-          - board: apalis-imx6
-            experimental: true
-          - board: colibri-imx6ull
-            experimental: true
-          - board: stm32mp15-disco
-            experimental: true
-          - board: qemuarm64-swupdate
-            subpath: demos
-            experimental: true
-          - board: jetson-agx-orin-devkit
-            experimental: true
 
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux, x64, builder]
     container:
       # the container image needs to be effectively hardcoded, it seems.
       image: ghcr.io/theyoctojester/devcontainer-base-yoep:main
@@ -112,6 +87,7 @@ jobs:
         - ${{ vars.PERSISTENT_DIR }}/downloads:${{ vars.BUILD_DL_DIR }}
         - ${{ vars.PERSISTENT_DIR }}/sstate-cache:${{ vars.BUILD_SSTATE_DIR }}
         - ${{ vars.PERSISTENT_DIR }}/layers:${{ vars.BUILD_LAYERCACHE_DIR }}
+        - ${{ vars.PERSISTENT_DIR }}/assets:${{ vars.BUILD_ASSETS_DIR }}
       options: --user ${{ vars.KAS_UID }}:${{ vars.KAS_GID }}
     steps:
       - name: enter build dir and build
@@ -119,4 +95,20 @@ jobs:
           DL_DIR: ${{ vars.BUILD_DL_DIR}}
           SSTATE_DIR: ${{ vars.BUILD_SSTATE_DIR}}
           KAS_REPO_REF_DIR: ${{ vars.BUILD_LAYERCACHE_DIR}}
-        run: mkdir -p $BUILDDIR/${{ matrix.board }} && cd $BUILDDIR/${{ matrix.board }} && kas build ../../kas/${{ matrix.subpath }}/${{ matrix.board }}.yml
+        run: >
+          mkdir -p $BUILDDIR/${{ matrix.board }} &&
+          cd $BUILDDIR/${{ matrix.board }} &&
+          kas checkout ../../kas/${{ matrix.subpath }}/${{ matrix.board }}.yml &&
+          if [ -f "${{ vars.BUILD_ASSETS_DIR }}/site.conf" ]; then 
+          cp ${{ vars.BUILD_ASSETS_DIR }}/site.conf build/conf/site.conf;
+          fi &&
+          kas build ../../kas/${{ matrix.subpath }}/${{ matrix.board }}.yml
+
+  collect:
+    needs: [prepare, build]
+    runs-on: [self-hosted, linux, x64, builder]
+    steps:
+      - name: collect artifacts
+        env:
+          ARTIFACT_PATH: ${{ needs.prepare.outputs.artifact_path }}
+        run: ./ci/collect_artifacts.sh
